[package]
name = "skidder-cli"
version = "0.1.0"
edition = "2024"
description = "A package manager for tree-sitter"
authors = ["Pascal Kuthe <pascalkuthe@pm.me>"]
license = "MPL-2.0"
repository = "https://github.com/helix-editor/tree-house"
readme = "../README.md"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
walkdir = "2.5"
xflags = "0.3"

skidder = { path = "../skidder" }
libloading = "0.8"
tempfile = "3.12"
indicatif = "0.17"
