[package]
name = "skidder"
version = "0.1.0"
edition = "2024"
description = "A package manager for tree-sitter"
authors = ["Pascal Kuthe <pascalkuthe@pm.me>"]
license = "MPL-2.0"
repository = "https://github.com/helix-editor/tree-house"
readme = "../README.md"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0"
cc = "1.1"
indicatif = "0.17"
ruzstd = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tempfile = "3.10"
walkdir = "2.5"
